# This file documents the revision history for Perl extension Catalyst.

5.8000_04
        - Use a predicate to avoid recursion in cases where the uri
          method is overridden by a plugin, and calls the base method,
          for example Catalyst::Plugin::SmartURI (t0m)
          - Test for this (caelum)
        - Compose the MooseX::Emulate::Class::Accessor::Fast role to 
          Catalyst::Action, Catalyst::Request, and all other modules which 
          inherit from Class::Accessor::Fast in 5.70.
          This fixes:
            - Catalyst::Controller::HTML::FormFu (zamolxes)
            - Catalyst::Request::REST (t0m)
          - Test for this (t0m)
        - Make hostname resolution lazy (Marc Mims)
        - Support mocking virtualhosts in test suite (Jason Gottshall)
        - Add README (marcus)
        - Fix TODO list (t0m)
        - Use Class::C3::Adopt::NEXT (rafl)
        - Ignore C3 warnings on 5.10 when testing ensure_class_loaded (rafl)
        - Add TODO test for chained bug (gbjk)
        - Fix list address in documentation (zarquon)
        - Fix ACCEPT_CONTEXT on MyApp, called as a class method (marcus)
           - Test for this (marcus)
        - Bump MooseX::Emulate::Class::Accessor::Fast version requirement to 
          get more back compatibility (t0m)
        - Improve documentation for $req->captures (caelum)
        - Fix a bug in Catalyst::Stats, stopping garbage being inserted into
          the stats if a user calls begin => but no end => (jhannah)
           - Test for this (jhannah)
        - Trim lines sooner in stats to avoid ugly Text::SimpleTable wrapping
          (jhannah)
        - Change Catalyst::ClassData to tweak the symbol table inline for
          performance after profiling (mst)
        - Fix POD typo in finalize_error (jhannah)
        - Add tests to ensure that we delete the temp files created by 
          HTTP::Body's OctetStream parser (t0m)

5.8000_03 2008-10-14 14:13:00