@@ -1,6 +1,8 @@
 # This file documents the revision history for Perl extension Catalyst.
 
 5.8000_04
+        - Remove use of NEXT from the test suite, except for one case
+          which tests if Class::C3::Adopt::NEXT is working (t0m)
         - Use a predicate to avoid recursion in cases where the uri
           method is overridden by a plugin, and calls the base method,
           for example Catalyst::Plugin::SmartURI (t0m)
